--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
  <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+   name="viewport"
+   content="width=device-width, initial-scale=1.0"
+  />
   <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
-  <script type="module" src="script.js" type="text/javascript" charset="utf-8"></script>
+  <script
+   type="module"
+   src="script.js"
+   type="text/javascript"
+   charset="utf-8"
+  ></script>
   <title>Physics Sym</title>
  </head>
  <body>
